<resources>
    <string name="app_name">Project_aoe2</string>
    <string name="category_civilizations">Civilizations</string>
    <string name="category_units">Units</string>
    <string name="category_structures">Structures</string>
    <string name="category_technologies">Technologies</string>
    <string name="expansion">Expansion : </string>
    <string name="unique_units">Unique Units : </string>
    <string name="unique_technologies">Unique Technologies : </string>
    <string name="civ_bonus_txt">Civilization bonus : </string>
    <string name="age">Age : </string>
    <string name="created_in">Created in : </string>
    <string name="develops_in">Develops in : </string>
    <string name="applies_to">Applies to : </string>
    <string name="personal_notes">Personal Notes</string>
</resources>