<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/technology_icon_detail"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:scaleType="fitStart"
        android:src="@drawable/placeholder"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/technology_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:textSize="30sp"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/lobster"/>

    <TextView
        android:id="@+id/technology_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/roboto"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/technology_expansion_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/roboto"
            android:text="@string/expansion"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/technology_expansion_img"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="5dp"
            android:scaleType="fitStart"
            android:src="@drawable/placeholder" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/technology_age_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/roboto"
            android:text="@string/age"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/technology_age_img"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="5dp"
            android:scaleType="fitStart"
            android:src="@drawable/placeholder" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/technology_develops_in_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/roboto"
            android:text="@string/develops_in"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/technology_develops_in_img"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="5dp"
            android:scaleType="fitStart"
            android:src="@drawable/placeholder" />
    </LinearLayout>

    <TextView
        android:id="@+id/cost_technology_txt_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/roboto"/>

    <TextView
        android:id="@+id/technology_build_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/roboto"/>

    <TextView
        android:id="@+id/technology_applies_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/roboto" />

</LinearLayout>